Updated server selection UI, and switched MAGE font across the app from Gondola to Roboto to match Android.

--- a/Mage/MAGE-Info.plist
+++ b/Mage/MAGE-Info.plist
@@ -87,9 +87,9 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Roboto-Light.ttf</string>
 		<string>Roboto-Medium.ttf</string>
 		<string>fontawesome-webfont.ttf</string>
-		<string>GondolaMage-Regular.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
